# md-mv16-emulator

./: .python-version  AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: build.yml  release.yml
desc/: app.json
rp/: build.sh
rp/src/: CMakeLists.txt  a2dp.c  blink.c  btstack_cyw43_no_flash.c  display.c  display_term.c  download.c  emul.c  main.c  mbedtls_config.h  network.c  reset.c  romaddr.c  romaddr.pio  romemul.c  sdcard.c  select.c  term.c  tprotocol.c
rp/src/include/: a2dp.h  a2dp_pcm_sample.h  aconfig.h  blink.h  btstack_config.h  constants.h  debug.h  display.h  display_term.h  download.h  emul.h  gconfig.h  memfunc.h  network.h  reset.h  romaddr.h  romemul.h  sdcard.h  select.h  target_firmware.h  term.h  tprotocol.h
tools/: requirements.txt  wav_to_pcm16_mono.py
